// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Start Experiment workflow renders correctly 1`] = `
"<PageLayout heading=\\"Start Experiment\\" error={[undefined]}>
  <ExperimentDetails upstreamClusterTypeSelectionEnabled={false} environments={{...}} onStart={[Function: onStart]} />
  <Dialog title=\\"Experiment Start Confirmation\\" open={false} onClose={[Function: onClose]}>
    <Styled(Component)>
      Are you sure you want to start an experiment? The experiment will start immediately and you will be moved to experiment details view page.
    </Styled(Component)>
    <Styled(Component)>
      <Button variant=\\"neutral\\" text=\\"No\\" onClick={[Function: onClick]} />
      <Button text=\\"Yes\\" onClick={[Function: onClick]} />
    </Styled(Component)>
  </Dialog>
</PageLayout>"
`;

exports[`Start Experiment workflow renders correctly with upstream cluster type selection enabled 1`] = `
"<PageLayout heading=\\"Start Experiment\\" error={[undefined]}>
  <ExperimentDetails upstreamClusterTypeSelectionEnabled={true} environments={{...}} onStart={[Function: onStart]} />
  <Dialog title=\\"Experiment Start Confirmation\\" open={false} onClose={[Function: onClose]}>
    <Styled(Component)>
      Are you sure you want to start an experiment? The experiment will start immediately and you will be moved to experiment details view page.
    </Styled(Component)>
    <Styled(Component)>
      <Button variant=\\"neutral\\" text=\\"No\\" onClick={[Function: onClick]} />
      <Button text=\\"Yes\\" onClick={[Function: onClick]} />
    </Styled(Component)>
  </Dialog>
</PageLayout>"
`;
